foundation-objs/main/default/objects/Resource_Constraints__mdt/Resource_Constraints__mdt.object-meta.xml
<CustomObject>
    <label>Resource Constraints</label>
    <pluralLabel>Resource Constraints</pluralLabel>
</CustomObject>