foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability</label>
    <type>Checkbox</type>
</CustomField>