foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Constraint_Type__c.field-meta.xml
<CustomField>
    <fullName>Constraint_Type__c</fullName>
    <label>Constraint Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>