foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Include_In_India__c.field-meta.xml
<CustomField>
    <fullName>Include_In_India__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In India</label>
    <type>Checkbox</type>
</CustomField>