foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Is_Eligible_For_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_For_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eligible For Notification</label>
    <type>Checkbox</type>
</CustomField>