foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Is_Usage_Time_Bound__c.field-meta.xml
<CustomField>
    <fullName>Is_Usage_Time_Bound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Usage Time Bound</label>
    <type>Checkbox</type>
</CustomField>