foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Metadata_Category__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Category__c</fullName>
    <label>Metadata Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>