foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Metadata_Category_Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Category_Display_Text__c</fullName>
    <label>Metadata Category Display Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>