foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Metadata_Display_Priority__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Display_Priority__c</fullName>
    <label>Metadata Display Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>