foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Metadata_Show_On_Summary_Page__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Show_On_Summary_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metadata Show On Summary Page</label>
    <type>Checkbox</type>
</CustomField>