foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Metadata_Title__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Title__c</fullName>
    <label>Metadata Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>