foundation-objs/main/default/objects/Resource_Constraints__mdt/fields/Salesforce_Field_Source__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Source__c</fullName>
    <label>Salesforce Field Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Quote Line Item</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>