foundation-objs/main/default/objects/Resource_Constraints__mdt/listViews/GCC.listView-meta.xml
<ListView>
    <fullName>GCC</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Metadata_Resource_Title__c</columns>
    <columns>Resource__c</columns>
    <columns>Salesforce_Field__c</columns>
    <columns>Constraint_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Include_In_GCC__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>GCC</label>
</ListView>