foundation-objs/main/default/objects/Resource_Constraints__mdt/listViews/My_View1.listView-meta.xml
<ListView>
    <fullName>My_View1</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Plan_Tier__c</columns>
    <columns>Resource__c</columns>
    <columns>Salesforce_Field__c</columns>
    <columns>Metadata_Display_Text__c</columns>
    <columns>Metadata_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>